# upc_mrn

./: .gitignore  CMakeLists.txt  README.md  gitlab-ci.yml  package.xml
config/: localization.yaml  nav2.yaml  slam.yaml
launch/: exploration.launch.py  exploration.launch.yaml  frontiers.launch.py  frontiers.launch.yaml  frontiers_turtlebot.launch.yaml  ignition.launch.py  localization.launch.py  localization.launch.yaml  nav.launch.py  nav.launch.yaml  robot_description.launch.py  ros_ign_bridge.launch.py  sim.launch.py  slam.launch.py  slam.launch.yaml  turtlebot4_nodes.launch.py  turtlebot4_spawn.launch.py  view_robot.launch.py
maps/: rooms.pgm  rooms.yaml
msg/: Frontier.msg  Frontiers.msg
rviz/: frontiers.rviz  laser.rviz  localization.rviz  odom.rviz  odom_new.rviz  robot.rviz  safety_node.rviz  slam.rviz
scripts/: exploration_biggest_frontier.cpp  exploration_biggest_frontier_2.cpp  exploration_closest_frontier.cpp  exploration_closest_frontier_2.cpp  exploration_closest_frontier_v0.cpp  exploration_project.cpp  exploration_project_2.cpp  laser_processor.cpp  safety_node.cpp  safety_node_pre.cpp  syncho.sh  synchro_rpi.sh  synchronization.sh  upc_mrn_setup.sh  upc_mrn_setup_personal.sh
src/: compute_path_client.cpp  exploration_base.h  exploration_biggest_frontier.cpp  exploration_closest_frontier.cpp  exploration_first_frontier.cpp  exploration_project.cpp  exploration_random.cpp  exploration_random_frontier.cpp  find_frontiers.cpp  laser_processor.cpp  node_prova.cpp  odom_new.cpp  pub_twist.cpp  safety_node.cpp
urdf/lite_no_oak/: turtlebot4.urdf.xacro
worlds/: large.sdf  rooms.sdf  simple.sdf  small.sdf
